# delta_hedge

./: .gitignore  README.md  main.py  pyproject.toml
config/: shfe_ag_demo.yaml
core/: backtest_runner.py  config_shema.py
data_fetcher/: option_fetcher.py  option_loader.py  option_loader_cursor.py  tusharedb.py
output_prod/20260317_030127_prod/: run_config.json
output_prod/20260317_030127_prod/freq_15min/: backtest_detail.csv  curve_data.csv  performance_metrics.csv
output_prod/20260317_030127_prod/freq_1d/: backtest_detail.csv  curve_data.csv  daily_decision.csv  performance_metrics.csv
output_prod/20260318_025735_prod/: run_config.json
output_prod/20260318_025735_prod/freq_15min/: backtest_detail.csv  curve_data.csv  daily_decision.csv  performance_metrics.csv
output_prod/20260318_025735_prod/freq_1d/: backtest_detail.csv  curve_data.csv  performance_metrics.csv
output_prod/20260319_035017_prod/freq_15min/: broker_record.csv  curve_data.csv  daily_decision.csv  performance_metrics.csv
output_prod/20260319_035017_prod/freq_1d/: backtest_detail.csv  curve_data.csv  daily_decision.csv  performance_metrics.csv
output_prod/20260325_013846_prod/: run_config.json
output_prod/20260325_013846_prod/freq_15min/: daily_decision.csv  performance_metrics.csv
output_prod/20260325_013846_prod/freq_1d/: backtest_detail.csv  broker_record.csv  daily_decision.csv
output_prod/20260326_025119_prod/freq_15min/: curve_data.csv
output_prod/20260326_025119_prod/freq_1d/: backtest_detail.csv  broker_record.csv  (+2 more)
utils/: check_data.py  plot_utils.py  tools.py
